--- a/src/App.css
+++ b/src/App.css
@@ -128,15 +128,19 @@
  
 }
 .card img {
+  height: 11rem;
+  width:11rem;
   max-width:100%;
   max-height:100%;
   border-radius: 5px 5px 0 0;
 }
 .card p {
   text-align: center;
+  display: block;
   user-select: none;
   color:white;
   text-shadow: 0 0 2px black;
   font-size: 1.2em;
+ 
 }
 /*Main Content END*/
